maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: not enough arguments for method chemin: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
chemin();
      ^